--- a/.github/workflows/micro-ci-front.yml
+++ b/.github/workflows/micro-ci-front.yml
@@ -29,7 +29,7 @@ jobs:
     name: Deploy to Heroku Platform
     runs-on: ubuntu-latest
     needs: [build]
-    if: github.ref == 'refs/heads/master'
+    if: github.ref == 'refs/heads/main'
 
     steps:
       - name: Checkout Project
